--- a/SACA-AE/www/css/index/index_main.less
+++ b/SACA-AE/www/css/index/index_main.less
@@ -16,5 +16,14 @@
 
 @import "styles/row-height-2 -- row_height.less";
 @import "af-label-position.less";
-@import "uib_row_3.less";
+
 @import "styles/row-height-3 -- row_height.less";
+@import "uib_row_3.less";
+@import "uib_row_3.less";
+@import "uib-grid.less";
+@import "styles/grid-text -- text-sizing.less";
+@import "styles/grid-height -- height.less";
+@import "uib-top-crossbar.less";
+@import "styles/bar-bg -- background.less";
+@import "styles/thumb-bg -- thumb.less";
+@import "styles/bar-gutter -- gutter.less";
